<?xml version="1.0" encoding="UTF-8"?>
<!--
  Production architecture-workspace Maven module.
  Authority: ADR-0147 (Structurizr Workspace Authority).

  This module is DELIBERATELY NOT a member of the spring-ai-ascend-parent
  reactor (root pom.xml does NOT list it under <modules>). It is invoked
  via `./mvnw -f tools/architecture-workspace/pom.xml ...` from the gate.
  No production module depends on com.structurizr:* — verified by Rule G-7
  and the impact matrix at docs/governance/architecture-workspace-impact-matrix.yaml.

  Lifecycle per the migration plan
  (D:\.claude\plans\structurizr-d-chao-workspace-spring-ai-adaptive-hellman.md):
    W1: WorkspaceProjectionCli + ProfileValidator + NormalizedModelWriter
    W3: fragment/* emitters added (modules, SPI, enforcers, principles, rules, ADR-graph)
    W4: gate/lib/build_architecture_projection.py added (reverse projection)
    W7: structurizr-dsl version bump policy ratified
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.huawei.ascend.tools</groupId>
  <artifactId>architecture-workspace</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>architecture-workspace</name>
  <description>Build-time tool that parses architecture/workspace.dsl, validates the Spring AI Ascend Architecture Profile, emits normalized JSON, and (W3+) emits fragment DSL from existing YAML authorities.</description>

  <properties>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <structurizr.version>6.2.1</structurizr.version>
    <jackson.version>2.18.1</jackson.version>
    <snakeyaml.version>2.4</snakeyaml.version>
    <junit.version>5.11.3</junit.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.structurizr</groupId>
      <artifactId>structurizr-dsl</artifactId>
      <version>${structurizr.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <dependency>
      <groupId>org.yaml</groupId>
      <artifactId>snakeyaml</artifactId>
      <version>${snakeyaml.version}</version>
    </dependency>
    <!--
      Fact-Layer Wave 4 (ADR-0154): ASM 9.7.1 scans compiled .class files
      under <module>/target/classes (production) and target/test-classes
      (tests) to emit public-interface / record / enum / Spring-stereotype
      / @Test-method facts. ASM was chosen over JavaParser source-AST as
      the primary code authority because compiled bytecode is the surface
      the runtime actually loads (so annotation-processed types like
      Lombok / MapStruct surface correctly).
    -->
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm</artifactId>
      <version>9.7.1</version>
    </dependency>
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm-tree</artifactId>
      <version>9.7.1</version>
    </dependency>
    <!--
      SLF4J binding so structurizr-dsl's transitive slf4j-api has a concrete
      logger implementation. Without this the JVM prints
      'SLF4J: Failed to load class "org.slf4j.impl.StaticLoggerBinder"' on
      every invocation and falls back to NOP (functionally fine, just noise).
      slf4j-simple is the smallest binding and writes to stderr by default;
      level set to ERROR via system property so the gate output stays quiet.
    -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>2.0.16</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <testResources>
      <!--
        Exclude *.dsl from test-resources copying. The .dsl fixtures are
        opened via `new File("src/test/resources/...")` directly from the
        test working directory (Maven sets cwd to module root). Avoiding
        the copy step works around a WSL+NTFS issue where
        maven-resources-plugin 3.4.0's setLastModifiedTime call fails with
        FileSystemException: Operation not permitted on cross-filesystem
        boundaries. Other test resources (yaml, properties, etc.) are
        copied normally.
      -->
      <testResource>
        <directory>src/test/resources</directory>
        <excludes>
          <exclude>**/*.dsl</exclude>
        </excludes>
      </testResource>
    </testResources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.2</version>
      </plugin>
      <!--
        Fact-Layer Wave 4 (ADR-0154 / Rule G-15 sub-clause .c.bytes): the
        byte-identity IT (FactLayerByteIdentityIT) is bound to the
        integration-test/verify phase via Failsafe. Without this plugin the
        *IT class matched no Surefire include pattern and never ran, so the
        byte-identity contract was unenforced. Surefire keeps running the
        unit *Test classes in the test phase; Failsafe runs *IT in verify.
      -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>3.5.2</version>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.5.0</version>
        <configuration>
          <mainClass>com.huawei.ascend.tools.architecture.WorkspaceProjectionCli</mainClass>
        </configuration>
        <executions>
          <!--
            Fact-Layer Wave 2 (ADR-0154 / Rule G-15): emit machine-extracted
            facts under architecture/facts/generated/. Invoked via
            mvn (f) tools/architecture-workspace/pom.xml exec:java@extract-facts.
            The CLI accepts repo, out, extractor-version, and check flags.
          -->
          <execution>
            <id>extract-facts</id>
            <goals>
              <goal>java</goal>
            </goals>
            <configuration>
              <mainClass>com.huawei.ascend.tools.architecture.facts.ExtractFactsCli</mainClass>
              <arguments>
                <argument>--repo</argument>
                <argument>${project.basedir}/../..</argument>
                <argument>--extractor-version</argument>
                <argument>${project.version}</argument>
              </arguments>
            </configuration>
          </execution>
          <!--
            Round-2 Wave A (ADR-0154 / 2026-05-28 P0-2): regenerate every
            architecture/generated/*.dsl fragment from its YAML authority.
            Invoked via mvn exec:java@regenerate-fragments after adding
            ADRs, rules, or enforcers so the workspace gate stays clean.
          -->
          <execution>
            <id>regenerate-fragments</id>
            <goals>
              <goal>java</goal>
            </goals>
            <configuration>
              <mainClass>com.huawei.ascend.tools.architecture.fragment.AllFragmentsCli</mainClass>
              <arguments>
                <argument>--repo</argument>
                <argument>${project.basedir}/../..</argument>
              </arguments>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
